--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <a href="hobbies.html">Hobbies</a>
   <a href="contact-me.html">Contact</a>
-  <a href="circleprofile.jpg">MyImage</a>
+  <a href="images/circleprofile.jpg">MyImage</a>
   <a href="inputs.html">Inputs</a>
 </body>
 
